// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/organisms/MapCanvas.vue snapshot can write and select nodes 1`] = `
<div
  class="map-canvas-wrapper"
  hegith="200"
>
  <div
    class="canvas-wrapper"
    tabindex="1"
  >
    <!---->
     
    <div
      class="svg-canvas-wrapper"
      style="width: 100px; height: 400px;"
    >
      <svg
        font-family="sans-serif"
        viewBox="0 0 100 400"
      >
         
        <g />
         
        <g />
         
        <g>
          <g
            class="mind-node"
          >
            <!---->
             
            <!---->
             
            <g>
              <rect
                fill="#B3E5FC"
                fill-opacity="1"
                height="28"
                rx="3"
                ry="3"
                stroke="black"
                stroke-dasharray="0"
                stroke-dashoffset="0"
                stroke-width="1"
                width="50"
                x="-25"
                y="0"
              />
               
              <text
                fill="#000000"
                font-size="15"
                font-weight="500"
                text-decoration=""
                x="-20"
                y="20"
              >
                
    root
  
              </text>
               
              <!---->
            </g>
             
            <!---->
          </g>
          <g
            class="mind-node"
          >
            <!---->
             
            <g>
              <g>
                <ellipse
                  cx="120.5"
                  cy="-28.5"
                  fill="#bbb"
                  rx="10"
                  ry="10"
                />
                 
                <text
                  fill="white"
                  font-size="10"
                  font-weight="500"
                  text-decoration=""
                  x="119"
                  y="-25"
                >
                  
    -
  
                </text>
              </g>
            </g>
             
            <g>
              <rect
                fill="#B3E5FC"
                fill-opacity="1"
                height="23"
                rx="3"
                ry="3"
                stroke="blue"
                stroke-dasharray="0"
                stroke-dashoffset="0"
                stroke-width="2"
                width="50"
                x="65"
                y="-40"
              />
               
              <text
                fill="#000000"
                font-size="10"
                font-weight="500"
                text-decoration=""
                x="70"
                y="-25"
              >
                
    aaaa
  
              </text>
               
              <!---->
            </g>
             
            <!---->
          </g>
          <g
            class="mind-node"
          >
            <g>
              <ellipse
                cx="90"
                cy="36"
                fill="#bbb"
                rx="25"
                ry="17"
              />
               
              <text
                fill="black"
                font-size="10"
                font-weight="500"
                text-decoration=""
                x="86"
                y="49"
              >
                
    3
  
              </text>
            </g>
             
            <!---->
             
            <g>
              <rect
                fill="#B3E5FC"
                fill-opacity="1"
                height="38"
                rx="3"
                ry="3"
                stroke="blue"
                stroke-dasharray="0"
                stroke-dashoffset="0"
                stroke-width="2"
                width="50"
                x="65"
                y="0"
              />
               
              <text
                fill="#000000"
                font-size="10"
                font-weight="500"
                text-decoration=""
                x="70"
                y="15"
              >
                
    bbbbbbb
  
              </text>
              <text
                fill="#000000"
                font-size="10"
                font-weight="500"
                text-decoration=""
                x="70"
                y="30"
              >
                
    bbbbb
  
              </text>
               
              <!---->
            </g>
             
            <!---->
          </g>
          <g
            class="mind-node"
          >
            <g>
              <ellipse
                cx="90"
                cy="91"
                fill="#bbb"
                rx="25"
                ry="17"
              />
               
              <text
                fill="black"
                font-size="10"
                font-weight="500"
                text-decoration=""
                x="86"
                y="104"
              >
                
    2
  
              </text>
            </g>
             
            <!---->
             
            <g>
              <rect
                fill="#B3E5FC"
                fill-opacity="1"
                height="53"
                rx="3"
                ry="3"
                stroke="black"
                stroke-dasharray="0"
                stroke-dashoffset="0"
                stroke-width="1"
                width="50"
                x="65"
                y="40"
              />
               
              <text
                fill="#000000"
                font-size="10"
                font-weight="500"
                text-decoration=""
                x="70"
                y="55"
              >
                
    cc
  
              </text>
              <text
                fill="#000000"
                font-size="10"
                font-weight="500"
                text-decoration=""
                x="70"
                y="70"
              >
                
    cc
  
              </text>
              <text
                fill="#000000"
                font-size="10"
                font-weight="500"
                text-decoration=""
                x="70"
                y="85"
              >
                
    ccc
  
              </text>
               
              <!---->
            </g>
             
            <!---->
          </g>
          <g
            class="mind-node"
          >
            <!---->
             
            <!---->
             
            <g>
              <rect
                fill="#B3E5FC"
                fill-opacity="1"
                height="23"
                rx="3"
                ry="3"
                stroke="black"
                stroke-dasharray="0"
                stroke-dashoffset="0"
                stroke-width="1"
                width="50"
                x="155"
                y="-40"
              />
               
              <text
                fill="#000000"
                font-size="10"
                font-weight="500"
                text-decoration=""
                x="181"
                y="-25"
              >
                
    dddd
  
              </text>
               
              <!---->
            </g>
             
            <g>
              <rect
                fill="white"
                height="18"
                rx="2"
                ry="2"
                stroke="black"
                stroke-width="1.5"
                width="18"
                x="158"
                y="-37.5"
              />
               
              <!---->
            </g>
          </g>
          <g
            class="mind-node"
          >
            <!---->
             
            <!---->
             
            <g>
              <rect
                fill="#B3E5FC"
                fill-opacity="1"
                height="23"
                rx="3"
                ry="3"
                stroke="black"
                stroke-dasharray="0"
                stroke-dashoffset="0"
                stroke-width="1"
                width="50"
                x="-115"
                y="20"
              />
               
              <text
                fill="#000000"
                font-size="10"
                font-weight="500"
                text-decoration="line-through"
                x="-89"
                y="35"
              >
                
    xxxx
  
              </text>
               
              <!---->
            </g>
             
            <g>
              <rect
                fill="white"
                height="18"
                rx="2"
                ry="2"
                stroke="black"
                stroke-width="1.5"
                width="18"
                x="-112"
                y="22.5"
              />
               
              <path
                d="M -109.75 29.25 -103 37.125 -91.75 24.75 -94 24.75 -103 33.75 -107.5 29.25 z"
                fill="blue"
                stroke="blue"
                stroke-width="1"
              />
            </g>
          </g>
          <g
            class="mind-node"
          >
            <!---->
             
            <g>
              <g>
                <ellipse
                  cx="-121.5"
                  cy="-8.5"
                  fill="#444"
                  rx="10"
                  ry="10"
                />
                 
                <text
                  fill="white"
                  font-size="10"
                  font-weight="500"
                  text-decoration=""
                  x="-125"
                  y="-5"
                >
                  
    2
  
                </text>
              </g>
            </g>
             
            <g>
              <rect
                fill="#B3E5FC"
                fill-opacity="1"
                height="23"
                rx="3"
                ry="3"
                stroke="black"
                stroke-dasharray="0"
                stroke-dashoffset="0"
                stroke-width="1"
                width="50"
                x="-115"
                y="-20"
              />
               
              <text
                fill="#000000"
                font-size="10"
                font-weight="500"
                text-decoration=""
                x="-110"
                y="-5"
              >
                
    zzzz
  
              </text>
               
              <!---->
            </g>
             
            <!---->
          </g>
          <g
            class="mind-node"
          >
            <!---->
             
            <!---->
             
            <g>
              <rect
                fill="#B3E5FC"
                fill-opacity="1"
                height="23"
                rx="3"
                ry="3"
                stroke="black"
                stroke-dasharray="0"
                stroke-dashoffset="0"
                stroke-width="1"
                width="50"
                x="-205"
                y="-20"
              />
               
              <text
                fill="#000000"
                font-size="10"
                font-weight="500"
                text-decoration=""
                x="-200"
                y="-5"
              >
                
    yyyy
  
              </text>
               
              <!---->
            </g>
             
            <!---->
          </g>
          <g
            class="mind-node"
          >
            <!---->
             
            <!---->
             
            <g>
              <rect
                fill="#B3E5FC"
                fill-opacity="1"
                height="23"
                rx="3"
                ry="3"
                stroke="black"
                stroke-dasharray="0"
                stroke-dashoffset="0"
                stroke-width="1"
                width="50"
                x="-205"
                y="20"
              />
               
              <text
                fill="#000000"
                font-size="10"
                font-weight="500"
                text-decoration=""
                x="-200"
                y="35"
              >
                
    uuuu
  
              </text>
               
              <!---->
            </g>
             
            <!---->
          </g>
        </g>
         
        <!---->
          
        <!---->
      </svg>
    </div>
  </div>
   
  <div
    class="scale-tool"
  >
    <scaletoolbox-stub
      max="15"
      min="-17.545081794683426"
      scalerate="0"
      step="0.1"
    />
  </div>
   
  <div
    class="history-tool"
  >
    <div
      class="history-tool-wrapper"
    >
      <div
        class="history-box"
      >
        <button
          class="undo-button v-btn v-btn--depressed v-btn--flat v-btn--icon v-btn--outlined v-btn--round theme--light v-size--small indigo--text"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              undo
            </i>
          </span>
        </button>
         
        <button
          class="redo-button v-btn v-btn--depressed v-btn--flat v-btn--icon v-btn--outlined v-btn--round theme--light v-size--small indigo--text"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              redo
            </i>
          </span>
        </button>
      </div>
    </div>
  </div>
   
  <!---->
   
  <!---->
   
  <!---->
   
  <div
    class="comment-list comment-list v-card v-sheet theme--light"
    style="display: none;"
  >
    <div
      class="switch-buttons"
    >
      <button
        class="v-btn v-btn--flat v-btn--text theme--light v-size--small black--text"
        type="button"
      >
        <span
          class="v-btn__content"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate material-icons theme--dark"
          >
            comment
          </i>
           
          <span>
            0
          </span>
        </span>
      </button>
    </div>
     
    <!---->
     
    <!---->
     
    <transition-stub
      name="v-snack-transition"
    />
  </div>
   
  <transition-stub
    name="v-snack-transition"
  />
</div>
`;

exports[`components/organisms/MapCanvas.vue snapshot full data 1`] = `
<div
  class="map-canvas-wrapper"
  hegith="200"
>
  <div
    class="canvas-wrapper"
    tabindex=""
  >
    <i
      aria-hidden="true"
      class="v-icon notranslate lock-button material-icons theme--light"
    >
      lock
    </i>
     
    <div
      class="svg-canvas-wrapper"
      style="width: 100px; height: 400px;"
    >
      <svg
        font-family="sans-serif"
        viewBox="0 0 100 400"
      >
         
        <g />
         
        <g />
         
        <g>
          <g
            class="mind-node"
          >
            <!---->
             
            <!---->
             
            <g>
              <rect
                fill="#B3E5FC"
                fill-opacity="1"
                height="28"
                rx="3"
                ry="3"
                stroke="black"
                stroke-dasharray="0"
                stroke-dashoffset="0"
                stroke-width="1"
                width="50"
                x="-25"
                y="0"
              />
               
              <text
                fill="#000000"
                font-size="15"
                font-weight="500"
                text-decoration=""
                x="-20"
                y="20"
              >
                
    root
  
              </text>
               
              <!---->
            </g>
             
            <!---->
          </g>
          <g
            class="mind-node"
          >
            <!---->
             
            <g>
              <g>
                <ellipse
                  cx="120.5"
                  cy="-28.5"
                  fill="#bbb"
                  rx="10"
                  ry="10"
                />
                 
                <text
                  fill="white"
                  font-size="10"
                  font-weight="500"
                  text-decoration=""
                  x="119"
                  y="-25"
                >
                  
    -
  
                </text>
              </g>
            </g>
             
            <g>
              <rect
                fill="#B3E5FC"
                fill-opacity="1"
                height="23"
                rx="3"
                ry="3"
                stroke="black"
                stroke-dasharray="0"
                stroke-dashoffset="0"
                stroke-width="1"
                width="50"
                x="65"
                y="-40"
              />
               
              <text
                fill="#000000"
                font-size="10"
                font-weight="500"
                text-decoration=""
                x="70"
                y="-25"
              >
                
    aaaa
  
              </text>
               
              <!---->
            </g>
             
            <!---->
          </g>
          <g
            class="mind-node"
          >
            <g>
              <ellipse
                cx="90"
                cy="36"
                fill="#bbb"
                rx="25"
                ry="17"
              />
               
              <text
                fill="black"
                font-size="10"
                font-weight="500"
                text-decoration=""
                x="86"
                y="49"
              >
                
    3
  
              </text>
            </g>
             
            <!---->
             
            <g>
              <rect
                fill="#B3E5FC"
                fill-opacity="1"
                height="38"
                rx="3"
                ry="3"
                stroke="black"
                stroke-dasharray="0"
                stroke-dashoffset="0"
                stroke-width="1"
                width="50"
                x="65"
                y="0"
              />
               
              <text
                fill="#000000"
                font-size="10"
                font-weight="500"
                text-decoration=""
                x="70"
                y="15"
              >
                
    bbbbbbb
  
              </text>
              <text
                fill="#000000"
                font-size="10"
                font-weight="500"
                text-decoration=""
                x="70"
                y="30"
              >
                
    bbbbb
  
              </text>
               
              <!---->
            </g>
             
            <!---->
          </g>
          <g
            class="mind-node"
          >
            <g>
              <ellipse
                cx="90"
                cy="91"
                fill="#bbb"
                rx="25"
                ry="17"
              />
               
              <text
                fill="black"
                font-size="10"
                font-weight="500"
                text-decoration=""
                x="86"
                y="104"
              >
                
    2
  
              </text>
            </g>
             
            <!---->
             
            <g>
              <rect
                fill="#B3E5FC"
                fill-opacity="1"
                height="53"
                rx="3"
                ry="3"
                stroke="black"
                stroke-dasharray="0"
                stroke-dashoffset="0"
                stroke-width="1"
                width="50"
                x="65"
                y="40"
              />
               
              <text
                fill="#000000"
                font-size="10"
                font-weight="500"
                text-decoration=""
                x="70"
                y="55"
              >
                
    cc
  
              </text>
              <text
                fill="#000000"
                font-size="10"
                font-weight="500"
                text-decoration=""
                x="70"
                y="70"
              >
                
    cc
  
              </text>
              <text
                fill="#000000"
                font-size="10"
                font-weight="500"
                text-decoration=""
                x="70"
                y="85"
              >
                
    ccc
  
              </text>
               
              <!---->
            </g>
             
            <!---->
          </g>
          <g
            class="mind-node"
          >
            <!---->
             
            <!---->
             
            <g>
              <rect
                fill="#B3E5FC"
                fill-opacity="1"
                height="23"
                rx="3"
                ry="3"
                stroke="black"
                stroke-dasharray="0"
                stroke-dashoffset="0"
                stroke-width="1"
                width="50"
                x="155"
                y="-40"
              />
               
              <text
                fill="#000000"
                font-size="10"
                font-weight="500"
                text-decoration=""
                x="181"
                y="-25"
              >
                
    dddd
  
              </text>
               
              <!---->
            </g>
             
            <g>
              <rect
                fill="white"
                height="18"
                rx="2"
                ry="2"
                stroke="black"
                stroke-width="1.5"
                width="18"
                x="158"
                y="-37.5"
              />
               
              <!---->
            </g>
          </g>
          <g
            class="mind-node"
          >
            <!---->
             
            <!---->
             
            <g>
              <rect
                fill="#B3E5FC"
                fill-opacity="1"
                height="23"
                rx="3"
                ry="3"
                stroke="black"
                stroke-dasharray="0"
                stroke-dashoffset="0"
                stroke-width="1"
                width="50"
                x="-115"
                y="20"
              />
               
              <text
                fill="#000000"
                font-size="10"
                font-weight="500"
                text-decoration="line-through"
                x="-89"
                y="35"
              >
                
    xxxx
  
              </text>
               
              <!---->
            </g>
             
            <g>
              <rect
                fill="white"
                height="18"
                rx="2"
                ry="2"
                stroke="black"
                stroke-width="1.5"
                width="18"
                x="-112"
                y="22.5"
              />
               
              <path
                d="M -109.75 29.25 -103 37.125 -91.75 24.75 -94 24.75 -103 33.75 -107.5 29.25 z"
                fill="blue"
                stroke="blue"
                stroke-width="1"
              />
            </g>
          </g>
          <g
            class="mind-node"
          >
            <!---->
             
            <g>
              <g>
                <ellipse
                  cx="-121.5"
                  cy="-8.5"
                  fill="#444"
                  rx="10"
                  ry="10"
                />
                 
                <text
                  fill="white"
                  font-size="10"
                  font-weight="500"
                  text-decoration=""
                  x="-125"
                  y="-5"
                >
                  
    2
  
                </text>
              </g>
            </g>
             
            <g>
              <rect
                fill="#B3E5FC"
                fill-opacity="1"
                height="23"
                rx="3"
                ry="3"
                stroke="black"
                stroke-dasharray="0"
                stroke-dashoffset="0"
                stroke-width="1"
                width="50"
                x="-115"
                y="-20"
              />
               
              <text
                fill="#000000"
                font-size="10"
                font-weight="500"
                text-decoration=""
                x="-110"
                y="-5"
              >
                
    zzzz
  
              </text>
               
              <!---->
            </g>
             
            <!---->
          </g>
          <g
            class="mind-node"
          >
            <!---->
             
            <!---->
             
            <g>
              <rect
                fill="#B3E5FC"
                fill-opacity="1"
                height="23"
                rx="3"
                ry="3"
                stroke="black"
                stroke-dasharray="0"
                stroke-dashoffset="0"
                stroke-width="1"
                width="50"
                x="-205"
                y="-20"
              />
               
              <text
                fill="#000000"
                font-size="10"
                font-weight="500"
                text-decoration=""
                x="-200"
                y="-5"
              >
                
    yyyy
  
              </text>
               
              <!---->
            </g>
             
            <!---->
          </g>
          <g
            class="mind-node"
          >
            <!---->
             
            <!---->
             
            <g>
              <rect
                fill="#B3E5FC"
                fill-opacity="1"
                height="23"
                rx="3"
                ry="3"
                stroke="black"
                stroke-dasharray="0"
                stroke-dashoffset="0"
                stroke-width="1"
                width="50"
                x="-205"
                y="20"
              />
               
              <text
                fill="#000000"
                font-size="10"
                font-weight="500"
                text-decoration=""
                x="-200"
                y="35"
              >
                
    uuuu
  
              </text>
               
              <!---->
            </g>
             
            <!---->
          </g>
        </g>
         
        <!---->
          
        <!---->
      </svg>
    </div>
  </div>
   
  <div
    class="scale-tool"
  >
    <scaletoolbox-stub
      max="15"
      min="-17.545081794683426"
      scalerate="0"
      step="0.1"
    />
  </div>
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <div
    class="comment-list comment-list v-card v-sheet theme--light"
    style="display: none;"
  >
    <div
      class="switch-buttons"
    >
      <button
        class="v-btn v-btn--flat v-btn--text theme--light v-size--small black--text"
        type="button"
      >
        <span
          class="v-btn__content"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate material-icons theme--dark"
          >
            comment
          </i>
           
          <span>
            0
          </span>
        </span>
      </button>
    </div>
     
    <!---->
     
    <!---->
     
    <transition-stub
      name="v-snack-transition"
    />
  </div>
   
  <transition-stub
    name="v-snack-transition"
  />
</div>
`;

exports[`components/organisms/MapCanvas.vue snapshot no data 1`] = `
<div
  class="map-canvas-wrapper"
  hegith="200"
>
  <div
    class="canvas-wrapper"
    tabindex=""
  >
    <i
      aria-hidden="true"
      class="v-icon notranslate lock-button material-icons theme--light"
    >
      lock
    </i>
     
    <div
      class="svg-canvas-wrapper"
      style="width: 100px; height: 400px;"
    >
      <svg
        font-family="sans-serif"
        viewBox="0 0 100 400"
      >
         
        <g />
         
        <g />
         
        <g>
          <g
            class="mind-node"
          >
            <!---->
             
            <!---->
             
            <g>
              <rect
                fill="#B3E5FC"
                fill-opacity="1"
                height="28"
                rx="3"
                ry="3"
                stroke="black"
                stroke-dasharray="0"
                stroke-dashoffset="0"
                stroke-width="1"
                width="50"
                x="-25"
                y="0"
              />
                
              <text
                fill="#000000"
                font-size="15"
                font-weight="500"
                text-decoration=""
                x="-20"
                y="20"
              >
                
    -XXACPR-
  
              </text>
            </g>
             
            <!---->
          </g>
        </g>
         
        <!---->
          
        <!---->
      </svg>
    </div>
  </div>
   
  <div
    class="scale-tool"
  >
    <scaletoolbox-stub
      max="15"
      min="-17.545081794683426"
      scalerate="0"
      step="0.1"
    />
  </div>
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <div
    class="comment-list comment-list v-card v-sheet theme--light"
    style="display: none;"
  >
    <div
      class="switch-buttons"
    >
      <button
        class="v-btn v-btn--flat v-btn--text theme--light v-size--small black--text"
        type="button"
      >
        <span
          class="v-btn__content"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate material-icons theme--dark"
          >
            comment
          </i>
           
          <span>
            0
          </span>
        </span>
      </button>
    </div>
     
    <!---->
     
    <!---->
     
    <transition-stub
      name="v-snack-transition"
    />
  </div>
   
  <transition-stub
    name="v-snack-transition"
  />
</div>
`;
